# lc_bikininjaPostersModGenerator

./: .gitignore  CICD_GUIDE.md  COMPLETION_SUMMARY.md  PROJECT_DELIVERY.md  QUICKSTART.md  README.md  STEP_BY_STEP_GUIDE.md  TEST_REPORT.md  generate_mods.ps1  generate_mods.sh  pyproject.toml  requirements.txt
.github/: ACTION_VERSIONS_REPORT.md  CI_CD_COMPLETE.md  WORKFLOW_VALIDATION_REPORT.md  copilot-instructions.md  labeler.yml
.github/workflows/: auto-merge-ci-cd.yml  auto-pr-with-copilot-review.yml  build-and-release.yml  ci.yml  generate-and-release.yml  publish-thunderstore.yml
docs/: BRANCH_CREATION_GUIDE.md
mods/: versions.json
scripts/: QUICK_REFERENCE.txt  create_branch_from_mods.ps1  create_branch_from_mods.sh  generate_mods.py
src/: __init__.py  media_processor.py  mod_generator.py
